saves/test/demo_full_20240802_193545/gates/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp gates_tb.v gates.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
gates_tb.v:84: $finish called at 12000 (1ps)

iverilog cmd 2 error:

